--- a/cloudformation/RegionalFindings-Template.yaml
+++ b/cloudformation/RegionalFindings-Template.yaml
@@ -166,6 +166,7 @@ Resources:
                   - aws.access-analyzer
                   - aws.macie
                   - aws.inspector2
+                  - aws.guardduty
               Targets:
                 - Arn: !Ref pEventBusDestinationArn
                   Id: SecurityEvent
@@ -300,6 +301,7 @@ Resources:
                 - aws.access-analyzer
                 - aws.macie
                 - aws.inspector2
+                - aws.guardduty
               State: ENABLED
       Environment:
         Variables:
