--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -48,6 +48,11 @@ Parameters:
     Description: Name of LogGroup where Prowler Container will write logs
     Default: prowler
 
+  pSlackSecret:
+    Description: FullName of secret that has a SLACK_API_TOKEN and SLACK_CHANNEL_ID to push updates to slack. See https://docs.prowler.cloud/en/latest/tutorials/integrations/
+    Type: String
+    Default: "NONE"
+
   #
   # Fargate Related Params
   #
@@ -93,6 +98,8 @@ Parameters:
     Description: Hostname of the Domain Endpoint
     Type: String
 
+Conditions:
+  cSlackSecret: !Not [!Equals [ !Ref pSlackSecret, "NONE" ]]
 
 Globals:
   Function:
@@ -202,10 +209,19 @@ Resources:
           LogConfiguration:
               LogDriver: awslogs
               Options:
-                awslogs-group: !Ref pLogGroupName
+                awslogs-group: !Ref ContainerLogGroup
                 awslogs-region: !Ref AWS::Region
                 awslogs-create-group: true
                 awslogs-stream-prefix: !Sub "${pServiceName}-${pImageVersion}"
+          Secrets:
+            !If
+            - cSlackSecret
+            -
+              - Name: SLACK_API_TOKEN
+                ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pSlackSecret}:SLACK_API_TOKEN::"
+              - Name: SLACK_CHANNEL_ID
+                ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pSlackSecret}:SLACK_CHANNEL_ID::"
+            - !Ref AWS::NoValue
           Environment:
             - Name: ROLENAME
               Value: !Ref pAuditRoleName
@@ -297,6 +313,15 @@ Resources:
                 - 'logs:CreateLogGroup'
                 - 'logs:PutLogEvents'
               Resource: '*'
+        - PolicyName: AccessSlackSecret
+          PolicyDocument:
+            Statement:
+            - Effect: Allow
+              Action:
+                - ssm:GetParameters
+                - secretsmanager:GetSecretValue
+                - kms:Decrypt
+              Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pSlackSecret}"
 
   ECSEventRole:
     Type: AWS::IAM::Role
@@ -470,7 +495,7 @@ Resources:
       # Any messages older than an hour are probably out-of-date
       MessageRetentionPeriod: 36000
       ReceiveMessageWaitTimeSeconds: 10
-      VisibilityTimeout: 300
+      VisibilityTimeout: 750
 
   S3EventQueuePolicy:
     Type: AWS::SQS::QueuePolicy
@@ -605,10 +630,16 @@ Resources:
       # AlarmActions:
       #   - !Ref SlackSNSTopic
 
+  ContainerLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Ref pLogGroupName
+      RetentionInDays: 30
+
   # ProwlerDurationMetricFilter:
   #   Type: AWS::Logs::MetricFilter
   #   Properties:
-  #     LogGroupName: !Ref pLogGroupName
+  #     LogGroupName: !Ref ContainerLogGroup
   #     FilterPattern: '[timestamp, logLevel, message = "Prowler Exited for", accountId = Number, "with error code", errorCode = Number, "after", durationSeconds = Number, "seconds"]'
   #     MetricTransformations:
   #       - MetricValue: "durationSeconds"
@@ -618,8 +649,10 @@ Resources:
 
   SuccessfulProwlerRunMetricFilter:
     Type: AWS::Logs::MetricFilter
+    DependsOn:
+      - ContainerLogGroup
     Properties:
-      LogGroupName: !Ref pLogGroupName
+      LogGroupName: !Ref ContainerLogGroup
       FilterPattern: '"Prowler Exited" "with error code 0"'
       MetricTransformations:
       - MetricNamespace: !Ref pProwlerMetricNamespace
@@ -628,8 +661,10 @@ Resources:
 
   FailedProwlerRunMetricFilter:
     Type: AWS::Logs::MetricFilter
+    DependsOn:
+      - ContainerLogGroup
     Properties:
-      LogGroupName: !Ref pLogGroupName
+      LogGroupName: !Ref ContainerLogGroup
       FilterPattern: '"Prowler Exited" -"with error code 0"'
       MetricTransformations:
       - MetricNamespace: !Ref pProwlerMetricNamespace
