--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -1,5 +1,16 @@
-# Copyright 2023 - Chris Farris - All Rights Reserved
+# Copyright 2021-2023 Chris Farris <chrisf@primeharbor.com>
 #
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Run Prowler across the entire org, and index findings in Elastic Search
@@ -32,7 +43,15 @@ Parameters:
 
   pRuleState:
     Type: String
-    Description: Enable to disable the CloudWatch Event to run the ECS Task
+    Description: Enable or disable the CloudWatch Event to run the ECS Task
+    Default: DISABLED
+    AllowedValues:
+      - DISABLED
+      - ENABLED
+
+  pSecurityHub:
+    Type: String
+    Description: Enable or disable pushing Prowler Findings to Security Hub
     Default: DISABLED
     AllowedValues:
       - DISABLED
@@ -229,6 +248,9 @@ Resources:
               Value: !Ref pPayerAccountId
             - Name: OUTPUT_BUCKET
               Value: !Ref pBucketName
+            - Name: SECURITY_HUB
+              Value: !Ref pSecurityHub
+
 
   ContainerRole:
     Type: AWS::IAM::Role
