--- a/cloudformation/RegionalFindings-Template.yaml
+++ b/cloudformation/RegionalFindings-Template.yaml
@@ -1,8 +1,19 @@
-# Copyright 2023 - Chris Farris - All Rights Reserved
+# Copyright 2021-2023 Chris Farris <chrisf@primeharbor.com>
 #
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Capture Regional Findings into OpenSearch
+Description: Capture Regional Security Tool Findings into OpenSearch
 Transform: AWS::Serverless-2016-10-31
 
 
@@ -54,22 +65,22 @@ Globals:
 
 Resources:
 
-  ExecutionRole:
-    Type: AWS::IAM::Role
-    Properties:
-      # RoleName: AWSCloudFormationStackSetExecutionRole
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          - Effect: Allow
-            Principal:
-              AWS:
-                - !Ref AWS::AccountId
-            Action:
-              - sts:AssumeRole
-      Path: /
-      ManagedPolicyArns:
-        - !Sub arn:${AWS::Partition}:iam::aws:policy/AdministratorAccess
+  # ExecutionRole:
+  #   Type: AWS::IAM::Role
+  #   Properties:
+  #     # RoleName: AWSCloudFormationStackSetExecutionRole
+  #     AssumeRolePolicyDocument:
+  #       Version: 2012-10-17
+  #       Statement:
+  #         - Effect: Allow
+  #           Principal:
+  #             AWS:
+  #               - !Ref AWS::AccountId
+  #           Action:
+  #             - sts:AssumeRole
+  #     Path: /
+  #     ManagedPolicyArns:
+  #       - !Sub arn:${AWS::Partition}:iam::aws:policy/AdministratorAccess
 
   AdministrationRole:
     Type: AWS::IAM::Role
@@ -105,7 +116,7 @@ Resources:
         - CAPABILITY_IAM
         - CAPABILITY_NAMED_IAM
       Description:  StackSet to Eventbridge to all regions
-      ExecutionRoleName: !Ref ExecutionRole
+      # ExecutionRoleName: !Ref ExecutionRole
       OperationPreferences:
         # Per the docs: MaxConcurrentCount is at most one more than the FailureToleranceCount.
         FailureTolerancePercentage: 100
