Script to Configure the IAM Roles after OpenSearch Deployment

--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -727,3 +727,6 @@ Outputs:
   ProwlerContainerTaskId:
     Value: !Ref ProwlerTaskDefinition
 
+  ProwlerRoleArn:
+    Value: !GetAtt LambdaRole.Arn
+    Condition: cDeployIngestLambda
