--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -343,7 +343,7 @@ Resources:
                 - ssm:GetParameters
                 - secretsmanager:GetSecretValue
                 - kms:Decrypt
-              Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pSlackSecret}"
+              Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pSlackSecret}*"
 
   ECSEventRole:
     Type: AWS::IAM::Role
