Add the Topic as a stack output for use by other stacks

--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -730,3 +730,6 @@ Outputs:
   ProwlerRoleArn:
     Value: !GetAtt LambdaRole.Arn
     Condition: cDeployIngestLambda
+
+  ProwlerBucketEventTopicArn:
+    Value: !Ref OutputNotificationTopic
