Configure Logging as INFO

--- a/cloudformation/Prowler-to-GSheet-Template.yaml
+++ b/cloudformation/Prowler-to-GSheet-Template.yaml
@@ -46,7 +46,7 @@ Globals:
     Environment:
       Variables:
           BUCKET: !Ref pBucketName
-          LOG_LEVEL: 'DEBUG'
+          LOG_LEVEL: 'INFO'
 
 Resources:
 
