Support trigger scan in both clouds

--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -775,6 +775,9 @@ Outputs:
   ECSClusterArn:
     Value: !GetAtt ECSCluster.Arn
 
+  ECSClusterName:
+    Value: !Ref ECSCluster
+
   ContainerSecurityGroup:
     Value: !Ref ContainerSecurityGroup
 
